añadiendo mi primer commit

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@ ganando españa
   </head>
   <body>
     <h1 esta es mi primera web></h1>
+    <h2 yo solo quiero a mi amor></h2>
   </body>
 </html>
